2008-06-05  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/itfile.h, itpp/base/random.h, itpp/comm/bch.h,
	itpp/comm/rec_syst_conv_code.h, itpp/comm/reedsolomon.h: Suppress
	MSVC++ warning C4512: "assignment operator could not be generated"

	MSVC++ warns when an assignment operator can not be automatically
	generated because of constant variables existing in a class. To
	suppress this warning an dummy assignment operator can be added as
	in this patch.

	* itpp/base/vec.cpp, itpp/fixed/fix.cpp: Suppress MSVC++ warning
	C4701: "potentially uninitialized local variable..."

	* itpp/base/gf2mat.cpp, itpp/base/itfile.cpp, itpp/base/mat.h,
	itpp/base/math/misc.h, itpp/base/vec.h, itpp/comm/galois.cpp,
	itpp/srccode/audiofile.cpp, itpp/srccode/pnm.cpp: Suppress MSVC++
	warning C4244: "conversion from 'int' to 'char'..."

	Some of the expressions require explicit casts to "char". Where
	appropriate "int get()" method of iostream class is replaced with
	"get(char &)" function. Besides, GF::set_size() method is
	re-factored a little bit, so the "mtemp" integer variable is no
	longer necessary.

	* itpp/base/factory.h, itpp/base/mat.h, itpp/base/matfunc.h,
	itpp/base/timing.cpp, itpp/base/vec.h, itpp/comm/bch.cpp,
	itpp/comm/channel.cpp, itpp/comm/convcode.cpp,
	itpp/comm/egolay.cpp, itpp/comm/hammcode.cpp, itpp/comm/ldpc.h,
	itpp/comm/modulator.cpp, itpp/comm/punct_convcode.cpp,
	itpp/comm/reedsolomon.cpp, itpp/fixed/cfix.h, itpp/fixed/cfixed.h,
	itpp/fixed/fix.h, itpp/fixed/fix_functions.h,
	itpp/protocol/tcp.cpp, itpp/protocol/tcp.h,
	itpp/stat/misc_stat.cpp, itpp/stat/mog_diag.cpp,
	itpp/stat/mog_diag.h, itpp/stat/mog_diag_em.cpp: Suppress MSVC++
	warning C4100: "unreferenced formal parameter"

	This warning is suppressed by omitting named parameters in
	arguments of functions. Only types of parameters are passed.

	* configure.ac.in: Change default debugging flags to "-g -O1" or
	"-Wall -ggdb -O1 -pipe"
